--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,12 @@ ja:
       user:
         name: バンド名
         member: メンバー
+        email: メールアドレス
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              format: '%{message}'
+              blank: '%{attribute}を入力してください'
+              taken: この%{attribute}は使用できません
